--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 *::before,
 *::after {
    box-sizing: border-box;
-    color: black;
+    color: rgb(255, 255, 255);
     padding: 0;
     margin: 0 auto;
 }
@@ -30,7 +30,6 @@ body{
     margin: 0 auto;
     padding: 0;
     background-color: #84a2fe;
-    color: #ffffff;
     font-family: "Super Mario Bros. NES", Helvetica, sans-serif;
     text-transform: uppercase;
 }
@@ -95,6 +94,22 @@ nav li span, a {
     max-width: 100%;
 }
 
+#sound-button {
+    position: absolute;
+    right: 10px;
+    top: 40px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 20px;
+}
+
+#sound-button.sound-on {
+    background-image: url("../img/sound-on.png");
+}
+#sound-button.sound-off {
+    background-image: url("../img/sound-off.png");
+}
 main {
     display: block;
     max-width: 800px;
