--- a/css/styles.css
+++ b/css/styles.css
@@ -131,27 +131,42 @@ main form {
     width: 400px;
     max-width: 100%;
     margin: 0 auto;
-}
-
-main input[type="text"]::before {
-    content: url("../img/mushroom-icon.png");
     position: relative;
-    left: -20px;
 }
 
-main submit::before {
+main form .mushy {
+    display: inline-block;
+}
+
+main form label p {
+    display: none;
+}
+
+main input:hover, main submit:hover {
+    cursor: pointer;
+}
+
+main label:hover::before {
     content: url("../img/mushroom-icon.png");
-    position: relative;
-    left: -20px;
+    position: absolute;
+    left: 0px;
+    top: 20px;
 }
 
-main form input[type="text"], main form submit {
+main submit:hover::before {
+    content: url("../img/mushroom-icon.png");
+    position: absolute;
+    left: 0px;
+}
+
+main form label input[type="text"], main form submit {
     background: none;
     border: 0;
-    display: block;
+    display: inline-block;
     text-align: center;
     margin: 0 auto;
     width: 100%;
+    outline: none;
 }
 
 main form input::placeholder {
@@ -160,14 +175,18 @@ main form input::placeholder {
 
 main p.topPlayer {margin-top: 50px;}
 
-.modal {width: 665px;
+.modal {
+    width: 665px;
+    overflow: hidden;
     background: url(../img/modal-bg.png) no-repeat;
+    background-size: cover;
+    border: none;
     height: 485px;
-position: absolute;
-left: 0;
-right: 0;
-top: 25%;
-text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 25%;
+    text-align: center;
 }
 
 .modal img {
@@ -232,12 +251,17 @@ text-align: center;
 
 footer {
     padding: 1rem;
-    background: url("../img/footer-bg.png") repeat-x;
-    height: 130px;
+    background: url("../img/footer-bg.png");
+    height: auto;
     color: white;
     width: 100%;
     position: relative;
     z-index: 2;
+}
+
+footer p {
+    text-align: center;
+    font-size: 16px;
 }
 
 @media screen and (min-width: 1880px) {
@@ -253,33 +277,55 @@ footer {
 
 @media screen and (max-width: 767px) {
     header {margin: 0 auto;}
-    nav ul {flex-direction: column; margin-top: 20px}
-    nav ul li {line-height: 1.5em; margin-bottom: 20px; flex: 0 1;}
+    
+    nav ul {
+        flex-direction: column; 
+        margin-top: 20px
+    }
+    
+    nav ul li {
+        line-height: 1.5em; 
+        margin-bottom: 20px; 
+        flex: 0 1;
+    }
+    
     .banner {width: 90%; }
+    
     main {padding: 0 10px;}
+    
     main p.topPlayer {font-size: 18px;}
-    .mcr-bg {height: 60px; margin-top: 120px;}
-    .pipe {width: 101px;
-    height: 138px;
-    z-index: 1;
-    position: relative;
-    bottom: 70px;
-    background-size: cover; }
-    .hill {width: 180px;
+    
+    .mcr-bg {
+        height: 60px; 
+        margin-top: 120px;
+    }
+    
+    .pipe {
+        width: 101px;
+        height: 138px;
+        z-index: 1;
+        position: relative;
+        bottom: 70px;
+        background-size: cover; }
+    
+    .hill {
+        width: 180px;
         height: 120px;
         z-index: 1;
         position: relative;
         bottom: -2px;
         background-size: contain;}
+    
     .modal {
         position: fixed;
         width: 90%;  
-        height: auto;
-        background-size: cover;
+        max-height: 350px;
+        height: 100%;
+        background-size: 100%;
         padding-bottom: 20px;      
     }
     .modal img {
-        margin: 50px auto 20px;
+        margin: 20px auto 20px;
         width: 280px;
         height: 210px;
     }
